force-app/main/default/objects/Account_Plan_Flow_Header__c/Account_Plan_Flow_Header__c.object-meta.xml
<CustomObject>
    <label>Acct Plan DM1 Product Config</label>
    <nameField>
        <displayFormat>FH-{00000}</displayFormat>
        <label>Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acct Plan DM1 Products Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>