force-app/main/default/objects/Account_Plan_Flow_Header__c/fields/Account_Plan_Flow_Header__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Flow_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Flow Header</label>
    <referenceTo>Account_Plan_Flow_Header__c</referenceTo>
    <relationshipName>Account_Plan_Flow_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>