force-app/main/default/objects/Account_Plan_Flow_Header__c/fields/EX_ID__c.field-meta.xml
<CustomField>
    <fullName>EX_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>EX_ID</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>