force-app/main/default/objects/Account_Plan_Flow_Header__c/fields/Fee_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Charge_Type__c</fullName>
    <label>Fee Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>