force-app/main/default/objects/Account_Plan_Flow_Header__c/fields/isExcludeforSum__c.field-meta.xml
<CustomField>
    <fullName>isExcludeforSum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isExcludeforSum</label>
    <type>Checkbox</type>
</CustomField>