force-app/main/default/objects/Account_Plan_Flow_Header__c/fields/isFreeCharge__c.field-meta.xml
<CustomField>
    <fullName>isFreeCharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFreeCharge</label>
    <type>Checkbox</type>
</CustomField>