force-app/main/default/objects/Account_Plan_Flow_Header__c/fields/isHide_Shared__c.field-meta.xml
<CustomField>
    <fullName>isHide_Shared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHide%Shared</label>
    <type>Checkbox</type>
</CustomField>