force-app/main/default/objects/Account_Plan_Flow_Header__c/fields/isHideRow__c.field-meta.xml
<CustomField>
    <fullName>isHideRow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHideRow</label>
    <type>Checkbox</type>
</CustomField>