force-app/main/default/objects/Account_Plan_Flow_Header__c/fields/IsIgnoredNo_Transactions__c.field-meta.xml
<CustomField>
    <fullName>IsIgnoredNo_Transactions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsIgnoredNo.Transactions</label>
    <type>Checkbox</type>
</CustomField>