force-app/main/default/objects/Account_Plan_Flow_Header__c/fields/isTerm__c.field-meta.xml
<CustomField>
    <fullName>isTerm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTerm</label>
    <type>Checkbox</type>
</CustomField>