force-app/main/default/objects/Account_Plan_Flow_Header__c/fields/isVolumePercent__c.field-meta.xml
<CustomField>
    <fullName>isVolumePercent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isVolumePercent</label>
    <type>Checkbox</type>
</CustomField>