force-app/main/default/objects/Account_Plan_Flow_Header__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>