force-app/main/default/objects/Account_Plan_Flow_Header__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collection Domestic</fullName>
            </value>
            <value>
                <fullName>Collection Export</fullName>
            </value>
            <value>
                <fullName>Payment Domestic</fullName>
            </value>
            <value>
                <fullName>Payment Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>