force-app/main/default/objects/Account_Plan_Flow_Header__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EX_ID__c</columns>
    <columns>Account_Plan_Flow_Header__c</columns>
    <columns>Label__c</columns>
    <columns>Method__c</columns>
    <columns>SEQ__c</columns>
    <columns>Account_Plan_Flow_Clone__c</columns>
    <columns>isActive__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>